--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -113,6 +113,90 @@
             </div>
             </div>
         </div>
+        <div class="modal fade" id="ModalCenter2" tabindex="-1" role="dialog" aria-labelledby="ModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="ModalCenterTitle">Add an Event</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row"> <!--Input event title-->
+                                <label for="event-title" class="col-sm-3 col-form-label">Event Name</label>
+                                <div class="col-sm-9">
+                                    <input type="text" class="form-control" id="event-title"placeholder="" value="">
+                                </div>
+
+                        </div>
+                        <div class="form-group row"> <!--Input address-->
+                            <label for="address"class="col-sm-3 col-form-label" >Address</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="streetaddress" placeholder="Street Address" value="">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="form-group col-md-6"><!--city input-->
+                                <input id="city" type="text" class="form-control" placeholder="City" value="">
+                            </div>
+                            <div class="form-group col-md-4"><!--state input-->
+                                <input id="state" type="text" class="form-control" placeholder="State" value="">
+                            </div>
+                            <div class="form-group col-md-2"> <!--Zip input-->
+                                <input id="zip" type="text" class="form-control" placeholder="Zip" value="">
+                            </div>
+                        </div>
+                        <div class="form-group row"> <!-- Date input -->
+                            <label class="col-sm-2 col-form-label" for="date">Date</label>
+                            <div class="col-sm-10">
+                                <input class="form-control" id="chooseDate" name="date" placeholder="MM/DD/YYYY" value="" type="text"/>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="form-group col-md-4">
+                                <label for="inputEventTime"> Event Time: </label> <!--Event time -->
+                                <select id="inputEventTime" class="form-control" value="">
+                                    <option selected>Event Time</option>
+                                    <option>12:00 am</option> <option>12:30 am</option> <option>01:00 am</option> <option>01:30 am</option>
+                                    <option>02:00 am</option> <option>02:30 am</option> <option>03:00 am</option> <option>03:30 am</option>
+                                    <option>04:00 am</option> <option>04:30 am</option> <option>05:00 am</option> <option>05:30 am</option>
+                                    <option>06:00 am</option> <option>06:30 am</option> <option>07:00 am</option> <option>07:30 am</option>
+                                    <option>08:00 am</option> <option>08:30 am</option> <option>09:00 am</option> <option>09:30 am</option>
+                                    <option>10:00 am</option> <option>10:30 am</option> <option>11:00 am</option> <option>11:30 am</option>
+                                    <option>12:00 pm</option> <option>12:30 pm</option> <option>01:00 pm</option> <option>01:30 pm</option>
+                                    <option>02:00 pm</option> <option>02:30 pm</option> <option>03:00 pm</option> <option>03:30 pm</option>
+                                    <option>04:00 pm</option> <option>04:30 pm</option> <option>05:00 pm</option> <option>05:30 pm</option>
+                                    <option>06:00 pm</option> <option>06:30 pm</option> <option>07:00 pm</option> <option>07:30 pm</option>
+                                    <option>08:00 pm</option> <option>08:30 pm</option> <option>09:00 pm</option> <option>09:30 pm</option>
+                                    <option>10:00 pm</option> <option>10:30 pm</option> <option>11:00 pm</option> <option>11:30 pm</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label for="inputReminderTime">Reminder Time:</label> <!--Time to be Reminded-->
+                                <select id="inputReminderTime" class="form-control" value="">
+                                    <option selected>Reminder Time</option>
+                                    <option>5 minutes before</option> <option>10 minutes before</option> <option>15 minutes before</option> <option>20 minutes before</option>
+                                    <option>30 minutes before</option> <option>45 minutes before</option> <option>1 hour before</option>
+                                    <option>2 hours before</option> <option>3 hours before</option> <option>4 hours before</option> <option>5 hours before</option>
+                                    <option>6 hours before</option> <option>7 hours before</option> <option>8 hours before</option> <option>9 hours before</option>
+                                    <option>10 hours before</option> <option>11 hours before</option> <option>12 hours before</option> <option>13 hours before</option>
+                                    <option>14 hours before</option> <option>15 hours before</option> <option>16 hours before</option> <option>17 hours before</option>
+                                    <option>18 hours before</option> <option>19 hours before </option> <option>20 hours before</option> <option>1 day before</option>
+                                </select>
+                            </div>
+                        </div>
+                        <!-- remind others field-->
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button id="b_update" type="button" class="btn btn-success" data-dismiss="modal">Update</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+            </div>
+        </div>
 		<div class="container">
 			<table class="table table-striped" id="eventTable">
 				<!--<thead>-->
@@ -175,7 +259,7 @@
           var reminder = childData["reminder"];
           //$('#eventTable').append('<tr><td>'+name+'</td><td>'+address+' '+city+' '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
           $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+' '+city+' '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td><td>'
-                +'<button type="button" class="btn btn-default" onclick="editCol()" aria-label="Left Align"\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
+                +'<button id=name type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align data-toggle="modal"data-target="#ModalCenter2""\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
                      +'</td></tr>');
           //start();
         });
@@ -196,6 +280,10 @@
             console.log(error);
           });
         }
+        document.getElementById("b_update").onclick = function() {update_event()};
+        function update_event(){
+
+        }
         document.getElementById("b_create").onclick = function() {create_event()};
         function create_event(){
             var name = document.getElementById("event-title").value;
@@ -209,7 +297,7 @@
 
             //insert element into the table
             $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+' '+city+' '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td><td>'
-                +'<button type="button" class="btn btn-default" onclick="editCol()" aria-label="Left Align"\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
+                +'<button id=name type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align data-toggle="modal"data-target="#ModalCenter2""\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
                      +'</td></tr>');
             //code for button to edit
             //glyphicon glyphicon-edit
@@ -252,9 +340,48 @@
         //ref.push(data);
       });
         }
-        function editCol(){
+        function editCol(clicked_id){
             $('td').prop('contenteditable',true);
-            window.alert("This button works");
+            console.log($('td'));
+            console.log($('td').text());
+
+            var key;
+            var ref = firebase.database().ref('users');
+            var email = localStorage.getItem("email");
+            //console.log(email);
+            ref.once('value', function(snapshot) {
+            snapshot.forEach(function(childSnapshot) {
+            var childKey = childSnapshot.key;
+            var childData = childSnapshot.val();
+            //console.log(childData["email"]);
+            if( childData["email"] === email) {
+              key = childKey;
+              //console.log(key);
+            }
+          });
+        }).then((res) => {
+          var eRef = firebase.database().ref('users/'+ key + '/events/');
+          eRef.once('value', function(snapshot) {
+          snapshot.forEach(function(childSnapshot) {
+          var childKey = childSnapshot.key;
+          var childData = childSnapshot.val();
+          //console.log(childData["email"]);
+          if( childData["name"] === clicked_id) {
+            var name =  childData["name"];
+            var address = childData["address"];
+            var city = childData["city"];
+            var state = childData["state"];
+            var zip = childData["zip"];
+            var date = childData["date"];
+            var eTime = childData["eTime"];
+            var reminder = childData["reminder"];
+            document.getElementById('event-title').setAttribute('value', name);
+            document.getElementById('event-title').setAttribute('value', name);
+          }
+        });
+      })
+        )};
+            //window.alert("This button works");
         }
         </script>
 
