--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -259,8 +259,9 @@
           var reminder = childData["reminder"];
           //$('#eventTable').append('<tr><td>'+name+'</td><td>'+address+' '+city+' '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
           $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+': '+city+', '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td><td>'
-                +'<button id=name type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align data-toggle="modal"data-target="#ModalCenter2""\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
-                     +'</td></tr>');
+                +'<button id="name" type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align" data-toggle="modal" data-target="#ModalCenter2"\> <span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button\>'
+                +'<button type="button" class="btn btn-default" aria-label="trash"\><span class="glyphicon glyphicon-trash" aria-hidden="true"\></span\></button\>'
+                    +'</td></tr>');
           //start();
         });
       });
@@ -298,7 +299,8 @@
             //insert element into the table
             $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+': '+city+', '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td><td>'
                 +'<button id=name type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align data-toggle="modal"data-target="#ModalCenter2""\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
-                     +'</td></tr>');
+                    + +'<button type="button" class="btn btn-default" aria-label="trash"\><span class="glyphicon glyphicon-trash" aria-hidden="true"\></span\></button\>'
+                    +'</td></tr>');
             //code for button to edit
             //glyphicon glyphicon-edit
             /*<button type="button" class="btn btn-default" aria-label="Left Align">
@@ -341,7 +343,7 @@
       });
         }
         function editCol(clicked_id){
-            $('td').prop('contenteditable',true);
+            //$('td').prop('contenteditable',true);
             console.log($('td'));
             console.log($('td').text());
 
