--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -117,7 +117,7 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="ModalCenterTitle">Add an Event</h4>
+                    <h4 class="modal-title" id="ModalCenterTitle">Edit an Event</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -127,37 +127,37 @@
                         <div class="form-group row"> <!--Input event title-->
                                 <label for="event-title" class="col-sm-3 col-form-label">Event Name</label>
                                 <div class="col-sm-9">
-                                    <input type="text" class="form-control" id="event-title"placeholder="" value="">
+                                    <input type="text" class="form-control" id="event-title2"placeholder="" value="" disabled>
                                 </div>
 
                         </div>
                         <div class="form-group row"> <!--Input address-->
                             <label for="address"class="col-sm-3 col-form-label" >Address</label>
                             <div class="col-sm-9">
-                                <input type="text" class="form-control" id="streetaddress" placeholder="Street Address" value="">
+                                <input type="text" class="form-control" id="streetaddress2" placeholder="Street Address" value="">
                             </div>
                         </div>
                         <div class="form-group row">
                             <div class="form-group col-md-6"><!--city input-->
-                                <input id="city" type="text" class="form-control" placeholder="City" value="">
+                                <input id="city2" type="text" class="form-control" placeholder="City" value="">
                             </div>
                             <div class="form-group col-md-4"><!--state input-->
-                                <input id="state" type="text" class="form-control" placeholder="State" value="">
+                                <input id="state2" type="text" class="form-control" placeholder="State" value="">
                             </div>
                             <div class="form-group col-md-2"> <!--Zip input-->
-                                <input id="zip" type="text" class="form-control" placeholder="Zip" value="">
+                                <input id="zip2" type="text" class="form-control" placeholder="Zip" value="">
                             </div>
                         </div>
                         <div class="form-group row"> <!-- Date input -->
                             <label class="col-sm-2 col-form-label" for="date">Date</label>
                             <div class="col-sm-10">
-                                <input class="form-control" id="chooseDate" name="date" placeholder="MM/DD/YYYY" value="" type="text"/>
+                                <input class="form-control" id="chooseDate2" name="date" placeholder="MM/DD/YYYY" value="" type="text"/>
                             </div>
                         </div>
                         <div class="form-group row">
                             <div class="form-group col-md-4">
                                 <label for="inputEventTime"> Event Time: </label> <!--Event time -->
-                                <select id="inputEventTime" class="form-control" value="">
+                                <select id="inputEventTime2" class="form-control" value="">
                                     <option selected>Event Time</option>
                                     <option>12:00 am</option> <option>12:30 am</option> <option>01:00 am</option> <option>01:30 am</option>
                                     <option>02:00 am</option> <option>02:30 am</option> <option>03:00 am</option> <option>03:30 am</option>
@@ -175,7 +175,7 @@
                             </div>
                             <div class="form-group col-md-4">
                                 <label for="inputReminderTime">Reminder Time:</label> <!--Time to be Reminded-->
-                                <select id="inputReminderTime" class="form-control" value="">
+                                <select id="inputReminderTime2" class="form-control" value="">
                                     <option selected>Reminder Time</option>
                                     <option>5 minutes before</option> <option>10 minutes before</option> <option>15 minutes before</option> <option>20 minutes before</option>
                                     <option>30 minutes before</option> <option>45 minutes before</option> <option>1 hour before</option>
@@ -259,8 +259,9 @@
           var reminder = childData["reminder"];
           //$('#eventTable').append('<tr><td>'+name+'</td><td>'+address+' '+city+' '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
           $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+': '+city+', '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td><td>'
-                +'<button id=name type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align data-toggle="modal"data-target="#ModalCenter2""\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
+                +'<button id=temp type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align" data-toggle="modal" data-target="#ModalCenter2"\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
                      +'</td></tr>');
+           document.getElementById("temp").setAttribute('id', name);
           //start();
         });
       });
@@ -282,14 +283,15 @@
         }
         document.getElementById("b_update").onclick = function() {update_event()};
         function update_event(){
-          var name = document.getElementById("event-title").value;
-          var address = document.getElementById("streetaddress").value;
-          var city = document.getElementById("city").value;
-          var state = document.getElementById("state").value;
-          var zip = document.getElementById("zip").value;
-          var date = document.getElementById("chooseDate").value;
-          var eTime = document.getElementById("inputEventTime").value;
-          var reminder = document.getElementById("inputReminderTime").value;
+          var name = document.getElementById("event-title2").value;
+          //console.log(document.getElementById("event-title2").value);
+          var address = document.getElementById("streetaddress2").value;
+          var city = document.getElementById("city2").value;
+          var state = document.getElementById("state2").value;
+          var zip = document.getElementById("zip2").value;
+          var date = document.getElementById("chooseDate2").value;
+          var eTime = document.getElementById("inputEventTime2").value;
+          var reminder = document.getElementById("inputReminderTime2").value;
 
           var user = firebase.auth().currentUser;
           var userId = user.uid;
@@ -302,29 +304,39 @@
           snapshot.forEach(function(childSnapshot) {
           var childKey = childSnapshot.key;
           var childData = childSnapshot.val();
-          console.log(childData["email"]);
+          //console.log(childData["email"]);
           if( childData["email"] === email) {
             key = childKey;
-            //console.log(key);
+            console.log(key);
           }
         });
       }).then((res) => {
         //console.log(key);
-        var data = {
-          name: name,
-          address: address,
-          city: city,
-          state: state,
-          zip: zip,
-          date: date,
-          eTime: eTime,
-          reminder: reminder,
-          email: email
-        };
-        var updates = {};
-        updates['/users/' + key + '/events/' + name] = data;
-        firebase.database().ref().update(updates);
-        //ref.push(data);
+        //console.log(name);
+        var eRef = firebase.database().ref('users/'+ key + '/events/');
+        eRef.once('value', function(snapshot) {
+        snapshot.forEach(function(childSnapshot) {
+          var childData = childSnapshot.val();
+          //console.log(childData["name"]);
+          if( childData["name"] === name) {
+            var db = firebase.database();
+            //console.log(key);
+            //console.log(name);
+            db.ref('/users/' + key + '/events/' + name).update( {
+              name: name,
+              address: address,
+              city: city,
+              state: state,
+              zip: zip,
+              date: date,
+              eTime: eTime,
+              reminder: reminder,
+              email: email
+            });
+          }
+        })
+      })
+        //window.location.replace("homepage.html");
       });
         }
         document.getElementById("b_create").onclick = function() {create_event()};
@@ -340,8 +352,9 @@
 
             //insert element into the table
             $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+': '+city+', '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td><td>'
-                +'<button id=name type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align data-toggle="modal"data-target="#ModalCenter2""\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
+                +'<button id=temp type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align data-toggle="modal"data-target="#ModalCenter2""\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
                      +'</td></tr>');
+            document.getElementById("temp").setAttribute('id', name);
             //code for button to edit
             //glyphicon glyphicon-edit
             /*<button type="button" class="btn btn-default" aria-label="Left Align">
@@ -384,9 +397,9 @@
       });
         }
         function editCol(clicked_id){
-            $('td').prop('contenteditable',true);
-            console.log($('td'));
-            console.log($('td').text());
+            //$('td').prop('contenteditable',true);
+            //console.log($('td'));
+            //console.log($('td').text());
 
             var key;
             var ref = firebase.database().ref('users');
@@ -408,8 +421,12 @@
           snapshot.forEach(function(childSnapshot) {
           var childKey = childSnapshot.key;
           var childData = childSnapshot.val();
+          console.log(clicked_id);
+          console.log(childData["name"]);
+
           //console.log(childData["email"]);
           if( childData["name"] === clicked_id) {
+            console.log("flag");
             var name =  childData["name"];
             var address = childData["address"];
             var city = childData["city"];
@@ -418,14 +435,14 @@
             var date = childData["date"];
             var eTime = childData["eTime"];
             var reminder = childData["reminder"];
-            document.getElementById('event-title').setAttribute('value', name);
-            document.getElementById('streetaddress').setAttribute('value', address);
-            document.getElementById('city').setAttribute('value', city);
-            document.getElementById('state').setAttribute('value', state);
-            document.getElementById('zip').setAttribute('value', zip);
-            document.getElementById('chooseDate').setAttribute('value', date);
-            document.getElementById('inputEventTime').setAttribute('value', eTime);
-            document.getElementById('inputReminderTime').setAttribute('value', reminder);
+            document.getElementById('event-title2').setAttribute('value', name);
+            document.getElementById('streetaddress2').setAttribute('value', address);
+            document.getElementById('city2').setAttribute('value', city);
+            document.getElementById('state2').setAttribute('value', state);
+            document.getElementById('zip2').setAttribute('value', zip);
+            document.getElementById('chooseDate2').setAttribute('value', date);
+            document.getElementById('inputEventTime2').setAttribute('value', eTime);
+            document.getElementById('inputReminderTime2').setAttribute('value', reminder);
           }
         });
       })
